i just made some changes in the scss style hero color and the cards flex style and the footer and the form in it and the last image

--- a/style/_cards.scss
+++ b/style/_cards.scss
@@ -10,6 +10,12 @@
     width: 100%;
     max-width: 1400px;
     justify-content: center;
+    .innerCardHolderLast {
+      position: relative;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+    }
     .card {
       position: relative;
       display: flex;
